--- a/app/globals.css
+++ b/app/globals.css
@@ -107,7 +107,7 @@ a {
 } */
 
 
-* {
+/* * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -116,5 +116,5 @@ a {
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-}
+  overflow-x: scroll;
+} */
